--- a/exmaples/three/index.html
+++ b/exmaples/three/index.html
@@ -38,7 +38,7 @@
     <script src="./IdGenerator.js"></script>
     <script src="./EventDispatcher.js"></script>
     <script src="./three.min.js"></script>
-    <script src="../../build/x.js"></script>
+    <script src="../../build/x.min.js"></script>
     <script>
         class RotationComponent extends X.Component {
             constructor(speed) {
