--- a/exmaples/three/index.html
+++ b/exmaples/three/index.html
@@ -54,7 +54,7 @@
         	}
         }
 
-        class RotationSystem extends X.AbstructSystem {
+        class RotationSystem extends X.ASystem {
         	constructor() {
         		super("Rotation System", (entity) => {
         			return entity.hasComponent("rotationSpeed");
@@ -66,7 +66,7 @@
         	}
         }
 
-        class RenderSystem extends X.AbstructSystem {
+        class RenderSystem extends X.ASystem {
         	constructor() {
         		super("Render System", (entity) => {
         			return true;
